# Lush

./: .lushrc  CMakeLists.txt  README.md
src/: main.c
src/shell/: error.h  lexer.c  lexer.h  shell.c  shell.h  token.h
src/util/: memory.c  memory.h  string.c  string.h
